  	  sdcc/device/lib/mos6502-stack-auto/_rrulonglong.c,
  	  sdcc/device/lib/mos6502-stack-auto/_rrslonglong.c,
  	  sdcc/device/lib/mos6502-stack-auto/_ret.c,
  	  sdcc/device/lib/mos6502-stack-auto/,
  	  sdcc/device/lib/Makefile.in,
  	  sdcc/device/lib/clean.mk,
  	  sdcc/configure.ac,
  	  sdcc/configure.ac:  	  
 	  Add mos6502 stack auto target.
	  
2022-02-19 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/sm83/memcpy.s,
	  device/lib/_memset.c:
	  Switch to GBDK-2020's algorithm with partial loop unrolling.
	* device/lib/_memmove.c:
	  On sm83 call memcpy where possible.

2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3322.
	* support/regression/tests/bug-3320.c:
	  Test for bug #3320.

2022-02-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (gatherImplicitVariables): fix bug #3320

2022-02-16 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/isspace.c,
	  device/lib/isxdigit.c:
	  Check high and low byte separately for some targets, also sort compares by frequency and int value.
	* device/lib/sm83/memcpy.s,
	  device/lib/_memset.c,
	  device/lib/gets.ch:
	  Optimize sm83 assembly.

2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3322.c:
	  Test for bug #3322.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Preparations for 4.2.0.

2022-02-14 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/regression/tests/bug-3289.c:
	  Test for recently-fixed bug #3289.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Avoid generating illegal 6502 instructions in a few corner cases.

2022-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c,
	  sdcc/src/SDCCglue.c:
	  Removed hack that assigned function pointers entry address-1.
	* sdcc/src/mos6502/main.c: